# web-assembly

./: README.md  multiple_page_app.html  multiple_page_app.js
multiple_page/: CMakeLists.txt  Main.qml  main.cpp
multiple_page/pages/: FirstPage.qml  SecondPage.qml  ThirdPage.qml
